# CivicAlert

./: .gitignore  LICENSE  README.md
ai/elm/: main.py
ai/yamnet/: Makefile
ai/yamnet/models/: model.py  model2.py
firmware/: CMakeLists.txt  README.md  sdkconfig
firmware/main/: CMakeLists.txt  app_config.h  idf_component.yml  logging.h  main.c
firmware/main/peripherals/: audio.c  audio.h  button.c  button.h  gps.c  gps.h  network.c  network.h  usb.c  usb.h
firmware/test/: requirements.txt  test_audio.c  test_audio_over_usb.c  test_audio_over_usb.py  test_button.c  test_gps.c  test_provisioning.py  test_usb.c  test_usb.py
hardware/design/: CivicAlert.kicad_pcb  CivicAlert.kicad_pro  CivicAlert.kicad_sch  acoustic_mcu.kicad_sch  fp-lib-table  gps.kicad_sch  power.kicad_sch  rpi.kicad_sch  sym-lib-table  usb_flashing.kicad_sch
hardware/design/parts/APA2107VBC_D/: APA2107VBC_D.kicad_sym  LED_APA2107VBC_D.kicad_mod
hardware/design/parts/CP2102N-A02-GQFN28/: CP2102N-A02-GQFN28.kicad_sym
hardware/design/parts/Custom/: CustomLibrary.kicad_sym
hardware/design/parts/ESDA25P35-1U1M/: 2024-08-09_20-20-12.kicad_sym
hardware/design/parts/IM73D122V01XTMA1/: 2024-08-10_16-36-16.kicad_sym
hardware/design/parts/L8050QLT1G/: L8050QLT1G.lib  L8050QLT1G.mod
hardware/design/parts/NCP133AMXADJTCG/: NCP133AMXADJTCG.kicad_sym
hardware/design/parts/RASPBERRY_PI_ZERO_2_W/: RASPBERRY_PI_ZERO_2_W.kicad_sym  Raspberry Pi Zero 2W Header.kicad_mod
hardware/design/parts/SI1016X-T1-GE3/: 2024-07-29_21-33-32.kicad_sym
